--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -204,6 +204,8 @@
 
     <!-- Cytoscape.js for graph visualization -->
     <script src="https://unpkg.com/cytoscape@3.28.1/dist/cytoscape.min.js"></script>
+    <!-- Marked.js for Markdown rendering -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
 
     <!-- Tocbot for table of contents -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.25.0/tocbot.css">
@@ -613,6 +615,100 @@
                 width: 250px;
             }
         }
+
+        /* Markdown Viewer Styles */
+        #md-viewer-content {
+            color: #e2e8f0;
+        }
+        #md-viewer-content h1 {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #fff;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+            border-bottom: 1px solid #334155;
+            padding-bottom: 0.5rem;
+        }
+        #md-viewer-content h2 {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #fff;
+            margin-top: 1.5rem;
+            margin-bottom: 0.75rem;
+        }
+        #md-viewer-content h3 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #cbd5e1;
+            margin-top: 1.25rem;
+            margin-bottom: 0.5rem;
+        }
+        #md-viewer-content p {
+            margin-bottom: 1rem;
+            line-height: 1.75;
+        }
+        #md-viewer-content ul, #md-viewer-content ol {
+            margin-bottom: 1rem;
+            padding-left: 1.5rem;
+        }
+        #md-viewer-content li {
+            margin-bottom: 0.5rem;
+        }
+        #md-viewer-content code {
+            background: #1e293b;
+            padding: 0.2rem 0.4rem;
+            border-radius: 0.25rem;
+            font-size: 0.875rem;
+            color: #14b8a6;
+            font-family: 'Roboto Mono', monospace;
+        }
+        #md-viewer-content pre {
+            background: #1e293b;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            overflow-x: auto;
+            margin-bottom: 1rem;
+        }
+        #md-viewer-content pre code {
+            background: transparent;
+            padding: 0;
+            color: #e2e8f0;
+        }
+        #md-viewer-content a {
+            color: #F86825;
+            text-decoration: underline;
+        }
+        #md-viewer-content a:hover {
+            color: #e05a1a;
+        }
+        #md-viewer-content blockquote {
+            border-left: 4px solid #14b8a6;
+            padding-left: 1rem;
+            color: #94a3b8;
+            margin-bottom: 1rem;
+            font-style: italic;
+        }
+        #md-viewer-content table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 1rem;
+        }
+        #md-viewer-content th {
+            background: #1e293b;
+            padding: 0.75rem;
+            text-align: left;
+            border: 1px solid #334155;
+            font-weight: 600;
+        }
+        #md-viewer-content td {
+            padding: 0.75rem;
+            border: 1px solid #334155;
+        }
+        #md-viewer-content hr {
+            border: none;
+            border-top: 1px solid #334155;
+            margin: 2rem 0;
+        }
     </style>
 </head>
 <body class="pt-20 px-4 sm:px-6 lg:px-8 pb-4">
@@ -649,6 +745,28 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"></path>
         </svg>
     </button>
+
+    <!-- Markdown Viewer Modal -->
+    <div id="md-viewer-modal" class="fixed inset-0 bg-black bg-opacity-75 z-[9999] hidden items-center justify-center p-4">
+        <div class="bg-slate-900 rounded-lg max-w-5xl w-full max-h-[90vh] flex flex-col">
+            <!-- Modal Header -->
+            <div class="flex items-center justify-between p-6 border-b border-slate-700">
+                <h2 id="md-viewer-title" class="text-2xl font-bold text-white"></h2>
+                <button onclick="closeMarkdownViewer()" class="text-slate-400 hover:text-white transition-colors">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
+            </div>
+            <!-- Modal Body -->
+            <div id="md-viewer-content" class="flex-1 overflow-y-auto p-6 prose prose-invert prose-slate max-w-none">
+                <div class="text-center text-slate-400">
+                    <div class="animate-spin inline-block w-8 h-8 border-4 border-current border-t-transparent rounded-full mb-2" role="status"></div>
+                    <p>로딩 중...</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Fixed Header with Logo -->
     <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-950/95 backdrop-blur-sm border-b border-slate-800">
@@ -1768,8 +1886,11 @@ ORDER BY ?labelKo</textarea>
                                 <div class="flex-1">
                                     <h3 class="text-lg font-semibold text-white mb-2">SPARQL 쿼리 예제</h3>
                                     <p class="text-sm text-slate-400 mb-3">7개 SPARQL 쿼리 + 웹 예제</p>
-                                    <a href="./example/sparql-queries.md" download class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
-                                        📥 sparql-queries.md
+                                    <button onclick="viewMarkdown('./example/sparql-queries.md', 'SPARQL 쿼리 예제')" class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
+                                        👁️ 보기
+                                    </button>
+                                    <a href="./example/sparql-queries.md" download class="bg-slate-700 hover:bg-slate-600 text-white px-4 py-2 rounded-lg text-sm inline-block ml-2 transition-colors">
+                                        📥 다운로드
                                     </a>
                                 </div>
                             </div>
@@ -1782,8 +1903,11 @@ ORDER BY ?labelKo</textarea>
                                 <div class="flex-1">
                                     <h3 class="text-lg font-semibold text-white mb-2">방법론 비교 문서</h3>
                                     <p class="text-sm text-slate-400 mb-3">수동/LLM/하이브리드 상세 비교</p>
-                                    <a href="./example/methodology-comparison.md" download class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
-                                        📥 methodology-comparison.md
+                                    <button onclick="viewMarkdown('./example/methodology-comparison.md', '방법론 비교 문서')" class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
+                                        👁️ 보기
+                                    </button>
+                                    <a href="./example/methodology-comparison.md" download class="bg-slate-700 hover:bg-slate-600 text-white px-4 py-2 rounded-lg text-sm inline-block ml-2 transition-colors">
+                                        📥 다운로드
                                     </a>
                                 </div>
                             </div>
@@ -1796,8 +1920,11 @@ ORDER BY ?labelKo</textarea>
                                 <div class="flex-1">
                                     <h3 class="text-lg font-semibold text-white mb-2">시각화 도구 가이드</h3>
                                     <p class="text-sm text-slate-400 mb-3">WebVOWL, Cytoscape.js 등 비교</p>
-                                    <a href="./example/owl-visualization-tools.md" download class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
-                                        📥 owl-visualization-tools.md
+                                    <button onclick="viewMarkdown('./example/owl-visualization-tools.md', '시각화 도구 가이드')" class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
+                                        👁️ 보기
+                                    </button>
+                                    <a href="./example/owl-visualization-tools.md" download class="bg-slate-700 hover:bg-slate-600 text-white px-4 py-2 rounded-lg text-sm inline-block ml-2 transition-colors">
+                                        📥 다운로드
                                     </a>
                                 </div>
                             </div>
@@ -1810,8 +1937,11 @@ ORDER BY ?labelKo</textarea>
                                 <div class="flex-1">
                                     <h3 class="text-lg font-semibold text-white mb-2">전체 아티클 (마크다운)</h3>
                                     <p class="text-sm text-slate-400 mb-3">완전한 보고서 초안</p>
-                                    <a href="./example/iso5259-ontology-article-draft.md" download class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
-                                        📥 article-draft.md
+                                    <button onclick="viewMarkdown('./example/iso5259-ontology-article-draft.md', '전체 아티클')" class="btn-primary px-4 py-2 rounded-lg text-sm inline-block">
+                                        👁️ 보기
+                                    </button>
+                                    <a href="./example/iso5259-ontology-article-draft.md" download class="bg-slate-700 hover:bg-slate-600 text-white px-4 py-2 rounded-lg text-sm inline-block ml-2 transition-colors">
+                                        📥 다운로드
                                     </a>
                                 </div>
                             </div>
@@ -2811,6 +2941,81 @@ ORDER BY ?date`
                 top: 0,
                 behavior: 'smooth'
             });
+        });
+
+        // Markdown Viewer Functions
+        async function viewMarkdown(url, title) {
+            const modal = document.getElementById('md-viewer-modal');
+            const titleEl = document.getElementById('md-viewer-title');
+            const contentEl = document.getElementById('md-viewer-content');
+
+            // Show modal
+            modal.classList.remove('hidden');
+            modal.classList.add('flex');
+
+            // Set title
+            titleEl.textContent = title;
+
+            // Show loading
+            contentEl.innerHTML = `
+                <div class="text-center text-slate-400">
+                    <div class="animate-spin inline-block w-8 h-8 border-4 border-current border-t-transparent rounded-full mb-2" role="status"></div>
+                    <p>로딩 중...</p>
+                </div>
+            `;
+
+            try {
+                // Fetch markdown content
+                const response = await fetch(url);
+                if (!response.ok) {
+                    throw new Error('파일을 불러올 수 없습니다.');
+                }
+                const markdown = await response.text();
+
+                // Configure marked for syntax highlighting
+                marked.setOptions({
+                    breaks: true,
+                    gfm: true,
+                    highlight: function(code, lang) {
+                        return code; // Simple highlighting - can be enhanced
+                    }
+                });
+
+                // Render markdown
+                const html = marked.parse(markdown);
+                contentEl.innerHTML = html;
+
+                // Scroll to top of content
+                contentEl.scrollTop = 0;
+
+            } catch (error) {
+                contentEl.innerHTML = `
+                    <div class="text-center text-red-400">
+                        <p class="text-xl mb-2">❌ 오류 발생</p>
+                        <p>${error.message}</p>
+                    </div>
+                `;
+            }
+        }
+
+        function closeMarkdownViewer() {
+            const modal = document.getElementById('md-viewer-modal');
+            modal.classList.remove('flex');
+            modal.classList.add('hidden');
+        }
+
+        // Close modal on Escape key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closeMarkdownViewer();
+            }
+        });
+
+        // Close modal when clicking outside
+        document.getElementById('md-viewer-modal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeMarkdownViewer();
+            }
         });
     </script>
 
