--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -58,14 +58,13 @@
     <meta property="article:tag" content="OWL">
     <meta property="article:tag" content="SPARQL">
 
-    <meta id="twitter-url" property="twitter:url" content="https://blog.pebblous.ai/project/CURK/ontology/iso5259-ontology-extraction.html">
-    <meta id="twitter-title" property="twitter:title" content="ISO 표준에서 온톨로지 추출하기: ISO/IEC 5259-2 사례 연구">
-    <meta id="twitter-description" property="twitter:description" content="ISO/IEC 5259-2 데이터 품질 표준에서 OWL 온톨로지를 추출하는 실전 가이드. 수동/LLM/하이브리드 방법론 비교, SPARQL 쿼리 실습을 제공합니다.">
-    <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/project/CURK/ontology/image/iso5259-ontology-extraction.png">
-    <meta name="twitter:image:alt" content="ISO 5259-2 온톨로지 구조">
-    <meta property="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@pebblous">
     <meta name="twitter:creator" content="@pebblous">
+    <meta name="twitter:title" content="ISO 표준에서 온톨로지 추출하기: ISO/IEC 5259-2 사례 연구">
+    <meta name="twitter:description" content="ISO/IEC 5259-2 데이터 품질 표준에서 OWL 온톨로지를 추출하는 실전 가이드. 수동/LLM/하이브리드 방법론 비교, SPARQL 쿼리 실습을 제공합니다.">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png">
+    <meta name="twitter:image:alt" content="ISO 5259-2 온톨로지 구조">
     <meta name="twitter:label1" content="읽는 시간">
     <meta name="twitter:data1" content="20분">
     <meta name="twitter:label2" content="난이도">
@@ -346,7 +345,7 @@
             top: 0;
             width: 280px;
             height: 100vh;
-            background: rgba(15, 23, 42, 0.95);
+            background: rgba(15, 23, 42, 0.98);
             border: none;
             padding: 1.5rem 1rem;
             overflow-y: auto;
@@ -439,7 +438,7 @@
         .toc-h2 .toc-link {
             flex: 1;
             font-weight: 600;
-            font-size: 0.8rem;
+            font-size: 0.95rem;
             color: #cbd5e1;
         }
 
@@ -494,13 +493,13 @@
             gap: 0.25rem;
         }
         .toc-h3 .toc-link {
-            font-size: 0.75rem;
+            font-size: 0.875rem;
             padding-left: 0.5rem;
         }
 
         /* H4 Level */
         .toc-h4 .toc-link {
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             padding-left: 0.75rem;
             color: #9ca3af;
         }
@@ -608,6 +607,63 @@
             stroke: white;
         }
 
+
+        /* Share Buttons */
+        .share-container {
+            display: flex;
+            gap: 0.75rem;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .share-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem 1rem;
+            border-radius: 0.5rem;
+            font-size: 0.875rem;
+            font-weight: 500;
+            transition: all 0.2s;
+            cursor: pointer;
+            border: none;
+        }
+        .share-btn-copy {
+            background: rgba(248, 104, 37, 0.1);
+            color: #F86825;
+            border: 1px solid rgba(248, 104, 37, 0.3);
+        }
+        .share-btn-copy:hover {
+            background: rgba(248, 104, 37, 0.2);
+            border-color: #F86825;
+        }
+        .share-btn-twitter {
+            background: rgba(29, 155, 240, 0.1);
+            color: #1d9bf0;
+            border: 1px solid rgba(29, 155, 240, 0.3);
+        }
+        .share-btn-twitter:hover {
+            background: rgba(29, 155, 240, 0.2);
+            border-color: #1d9bf0;
+        }
+        .share-btn-facebook {
+            background: rgba(24, 119, 242, 0.1);
+            color: #1877f2;
+            border: 1px solid rgba(24, 119, 242, 0.3);
+        }
+        .share-btn-facebook:hover {
+            background: rgba(24, 119, 242, 0.2);
+            border-color: #1877f2;
+        }
+        .share-btn-linkedin {
+            background: rgba(0, 119, 181, 0.1);
+            color: #0077b5;
+            border: 1px solid rgba(0, 119, 181, 0.3);
+        }
+        .share-btn-linkedin:hover {
+            background: rgba(0, 119, 181, 0.2);
+            border-color: #0077b5;
+        }
 
         /* Mobile responsive */
         @media (max-width: 768px) {
@@ -796,19 +852,47 @@
             <div class="flex flex-wrap justify-center items-center gap-2 text-sm text-slate-400 mb-8">
                 <span>발행일: 2025년 11월 1일</span>
                 <span class="text-slate-600">|</span>
-                <span>리서치: 페블러스 데이터 커뮤니케이션 팀</span>
+                <span>리서치: <a href="mailto:contact@pebblous.ai" class="text-teal-400 hover:text-teal-300 transition-colors">페블러스 데이터 커뮤니케이션 팀</a></span>
                 <span class="text-slate-600">|</span>
                 <span>읽는 시간: 약 20분</span>
             </div>
 
+            <!-- 공유하기 -->
+            <div class="share-container mb-8">
+                <button id="copy-url-btn" class="share-btn share-btn-copy">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
+                    </svg>
+                    <span>URL 복사</span>
+                </button>
+                <button id="share-twitter-btn" class="share-btn share-btn-twitter">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+                    </svg>
+                    <span>Twitter</span>
+                </button>
+                <button id="share-facebook-btn" class="share-btn share-btn-facebook">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path>
+                    </svg>
+                    <span>Facebook</span>
+                </button>
+                <button id="share-linkedin-btn" class="share-btn share-btn-linkedin">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path>
+                    </svg>
+                    <span>LinkedIn</span>
+                </button>
+            </div>
+
             <!-- 개요 -->
             <div class="card p-6 mb-8">
-                <h2 class="text-2xl font-semibold text-white mb-4">📖 아티클 개요</h2>
-                <p class="text-slate-300 mb-4 leading-relaxed">
+                <h2 class="text-3xl font-semibold text-white mb-4">📖 아티클 개요</h2>
+                <p class="text-slate-300 mb-4 leading-relaxed text-base">
                     ISO/IEC 5259-2는 AI/ML 시스템의 데이터 품질을 평가하는 국제 표준입니다.
                     이 아티클에서는 이 표준 문서에서 <strong class="text-white">OWL 온톨로지를 추출하는 전 과정</strong>을 다룹니다.
                 </p>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-base">
                     <div class="bg-slate-800/30 p-4 rounded-lg">
                         <h3 class="font-semibold text-slate-200 mb-2">🎯 학습 목표</h3>
                         <ul class="list-disc list-inside space-y-1 text-slate-400">
@@ -3016,6 +3100,51 @@ ORDER BY ?date`
             if (e.target === this) {
                 closeMarkdownViewer();
             }
+        });
+
+        // ===== Share Buttons =====
+        const pageUrl = window.location.href;
+        const pageTitle = document.getElementById('page-title').textContent;
+        const pageDescription = document.getElementById('meta-description').content;
+
+        // URL 복사
+        document.getElementById('copy-url-btn').addEventListener('click', async function() {
+            try {
+                await navigator.clipboard.writeText(pageUrl);
+                const btn = this;
+                const originalText = btn.querySelector('span').textContent;
+                btn.querySelector('span').textContent = '복사됨!';
+                btn.style.background = 'rgba(20, 184, 166, 0.2)';
+                btn.style.color = '#14b8a6';
+                btn.style.borderColor = '#14b8a6';
+
+                setTimeout(() => {
+                    btn.querySelector('span').textContent = originalText;
+                    btn.style.background = '';
+                    btn.style.color = '';
+                    btn.style.borderColor = '';
+                }, 2000);
+            } catch (err) {
+                console.error('URL 복사 실패:', err);
+            }
+        });
+
+        // Twitter 공유
+        document.getElementById('share-twitter-btn').addEventListener('click', function() {
+            const twitterUrl = `https://twitter.com/intent/tweet?url=${encodeURIComponent(pageUrl)}&text=${encodeURIComponent(pageTitle)}`;
+            window.open(twitterUrl, '_blank', 'width=550,height=420');
+        });
+
+        // Facebook 공유
+        document.getElementById('share-facebook-btn').addEventListener('click', function() {
+            const facebookUrl = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(pageUrl)}`;
+            window.open(facebookUrl, '_blank', 'width=550,height=420');
+        });
+
+        // LinkedIn 공유
+        document.getElementById('share-linkedin-btn').addEventListener('click', function() {
+            const linkedinUrl = `https://www.linkedin.com/sharing/share-offsite/?url=${encodeURIComponent(pageUrl)}`;
+            window.open(linkedinUrl, '_blank', 'width=550,height=420');
         });
     </script>
 
