--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -63,8 +63,8 @@
     <meta name="twitter:creator" content="@pebblous">
     <meta name="twitter:title" content="ISO 표준에서 온톨로지 추출하기: ISO/IEC 5259-2 사례 연구">
     <meta name="twitter:description" content="ISO/IEC 5259-2 데이터 품질 표준에서 OWL 온톨로지를 추출하는 실전 가이드. 수동/LLM/하이브리드 방법론 비교, SPARQL 쿼리 실습을 제공합니다.">
-    <meta name="twitter:image" content="https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png">
-    <meta name="twitter:image:alt" content="ISO 5259-2 온톨로지 구조">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/project/CURK/ontology/image/iso5259-ontology-extraction.png">
+    <meta name="twitter:image:alt" content="ISO 5259-2 온톨로지 구조 다이어그램">
     <meta name="twitter:label1" content="읽는 시간">
     <meta name="twitter:data1" content="20분">
     <meta name="twitter:label2" content="난이도">
@@ -341,19 +341,21 @@
         /* ===== Table of Contents Sidebar ===== */
         #toc-sidebar {
             position: fixed;
-            left: 0;
-            top: 0;
+            left: 1rem;
+            top: 1rem;
             width: 280px;
-            height: 100vh;
-            background: rgba(15, 23, 42, 0.98);
-            border: none;
+            height: calc(100vh - 2rem);
+            background: rgba(15, 23, 42, 0.85);
+            border: 1px solid rgba(148, 163, 184, 0.2);
+            border-radius: 0.75rem;
             padding: 1.5rem 1rem;
             overflow-y: auto;
             z-index: 1000;
             transform: translateX(-100%);
             transition: transform 0.3s ease;
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
         }
         #toc-sidebar.open {
             transform: translateX(0);
@@ -609,60 +611,68 @@
 
 
         /* Share Buttons */
+        /* Share Section - Minimal Style */
         .share-container {
             display: flex;
-            gap: 0.75rem;
+            gap: 1rem;
             align-items: center;
             justify-content: center;
             flex-wrap: wrap;
         }
+        .share-label {
+            font-size: 0.875rem;
+            color: #94a3b8;
+            font-weight: 500;
+        }
         .share-btn {
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
-            padding: 0.5rem 1rem;
-            border-radius: 0.5rem;
-            font-size: 0.875rem;
-            font-weight: 500;
-            transition: all 0.2s;
-            cursor: pointer;
+            gap: 0.375rem;
+            padding: 0;
+            background: none;
             border: none;
+            color: #64748b;
+            cursor: pointer;
+            transition: color 0.2s;
+            font-size: 0.875rem;
         }
-        .share-btn-copy {
-            background: rgba(248, 104, 37, 0.1);
+        .share-btn svg {
+            width: 1.25rem;
+            height: 1.25rem;
+            transition: transform 0.2s;
+        }
+        .share-btn:hover {
             color: #F86825;
-            border: 1px solid rgba(248, 104, 37, 0.3);
         }
-        .share-btn-copy:hover {
-            background: rgba(248, 104, 37, 0.2);
-            border-color: #F86825;
+        .share-btn:hover svg {
+            transform: scale(1.1);
         }
-        .share-btn-twitter {
-            background: rgba(29, 155, 240, 0.1);
-            color: #1d9bf0;
-            border: 1px solid rgba(29, 155, 240, 0.3);
+
+        /* Hyperlink Style - Minimal Underline (only for text content) */
+        .container-custom p a,
+        .container-custom li a,
+        .container-custom td a,
+        .container-custom blockquote a {
+            color: inherit;
+            text-decoration: none;
+            border-bottom: 1px solid #F86825;
+            transition: border-color 0.2s;
         }
-        .share-btn-twitter:hover {
-            background: rgba(29, 155, 240, 0.2);
-            border-color: #1d9bf0;
+        .container-custom p a:hover,
+        .container-custom li a:hover,
+        .container-custom td a:hover,
+        .container-custom blockquote a:hover {
+            border-bottom: 2px solid #F86825;
         }
-        .share-btn-facebook {
-            background: rgba(24, 119, 242, 0.1);
-            color: #1877f2;
-            border: 1px solid rgba(24, 119, 242, 0.3);
+
+        /* Footer links - no underline, just color change */
+        .footer-link {
+            border-bottom: none !important;
+            color: #94a3b8;
+            transition: color 0.2s;
         }
-        .share-btn-facebook:hover {
-            background: rgba(24, 119, 242, 0.2);
-            border-color: #1877f2;
-        }
-        .share-btn-linkedin {
-            background: rgba(0, 119, 181, 0.1);
-            color: #0077b5;
-            border: 1px solid rgba(0, 119, 181, 0.3);
-        }
-        .share-btn-linkedin:hover {
-            background: rgba(0, 119, 181, 0.2);
-            border-color: #0077b5;
+        .footer-link:hover {
+            color: #F86825;
         }
 
         /* Mobile responsive */
@@ -852,36 +862,34 @@
             <div class="flex flex-wrap justify-center items-center gap-2 text-sm text-slate-400 mb-8">
                 <span>발행일: 2025년 11월 1일</span>
                 <span class="text-slate-600">|</span>
-                <span>리서치: <a href="mailto:contact@pebblous.ai" class="text-teal-400 hover:text-teal-300 transition-colors">페블러스 데이터 커뮤니케이션 팀</a></span>
+                <span>리서치: <a href="mailto:contact@pebblous.ai">페블러스 데이터 커뮤니케이션 팀</a></span>
                 <span class="text-slate-600">|</span>
                 <span>읽는 시간: 약 20분</span>
             </div>
 
             <!-- 공유하기 -->
             <div class="share-container mb-8">
-                <button id="copy-url-btn" class="share-btn share-btn-copy">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <span class="share-label">공유하기:</span>
+                <button id="copy-url-btn" class="share-btn" title="URL 복사">
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
                     </svg>
-                    <span>URL 복사</span>
+                    <span>URL</span>
                 </button>
-                <button id="share-twitter-btn" class="share-btn share-btn-twitter">
-                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                <button id="share-twitter-btn" class="share-btn" title="Twitter에 공유">
+                    <svg fill="currentColor" viewBox="0 0 24 24">
                         <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
                     </svg>
-                    <span>Twitter</span>
                 </button>
-                <button id="share-facebook-btn" class="share-btn share-btn-facebook">
-                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                <button id="share-facebook-btn" class="share-btn" title="Facebook에 공유">
+                    <svg fill="currentColor" viewBox="0 0 24 24">
                         <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path>
                     </svg>
-                    <span>Facebook</span>
                 </button>
-                <button id="share-linkedin-btn" class="share-btn share-btn-linkedin">
-                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                <button id="share-linkedin-btn" class="share-btn" title="LinkedIn에 공유">
+                    <svg fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path>
                     </svg>
-                    <span>LinkedIn</span>
                 </button>
             </div>
 
@@ -3114,15 +3122,11 @@ ORDER BY ?date`
                 const btn = this;
                 const originalText = btn.querySelector('span').textContent;
                 btn.querySelector('span').textContent = '복사됨!';
-                btn.style.background = 'rgba(20, 184, 166, 0.2)';
                 btn.style.color = '#14b8a6';
-                btn.style.borderColor = '#14b8a6';
 
                 setTimeout(() => {
                     btn.querySelector('span').textContent = originalText;
-                    btn.style.background = '';
                     btn.style.color = '';
-                    btn.style.borderColor = '';
                 }, 2000);
             } catch (err) {
                 console.error('URL 복사 실패:', err);
