--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -665,6 +665,25 @@
             border-bottom: 2px solid #F86825;
         }
 
+        /* Footer Styles */
+        .pebblous-footer {
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', sans-serif;
+        }
+
+        .pebblous-footer ul {
+            line-height: 1.6; /* Reduced from default space-y-3 */
+        }
+
+        .pebblous-footer li {
+            margin-bottom: 0.5rem; /* Tighter spacing */
+        }
+
+        .pebblous-footer sup {
+            font-size: 0.65em; /* Increased from default ~0.55em */
+            vertical-align: super;
+            line-height: 0;
+        }
+
         /* Footer links - no underline, just color change */
         .footer-link {
             border-bottom: none !important;
